--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <footer>
       <div layout="row" layout-align="center center">
         <i>{{stateObj | json}}</i>
-        <i>{{setting_Obj | json}}</i>
+        <i>{{settingObj | json}}</i>
       </div>
     </footer>
     <!-- Angular Material requires Angular.js Libraries -->
