renamed:    views/form/baseplan/LPUL.html -> customizations/baseplan/LPUL.html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
        
         document.write('<scr'+'ipt type="text/javascript" src="core/route.js?cb=' +cachebuster+'"></scr' + 'ipt>');
         document.write('<scr'+'ipt type="text/javascript" src="core/directives.js?cb=' +cachebuster+'"></scr' + 'ipt>');
-        document.write('<scr'+'ipt type="text/javascript" src="core/services.js?cb=' +cachebuster+'"></scr' + 'ipt>');
+        document.write('<scr'+'ipt type="text/javascript" src="core/productServices.js?cb=' +cachebuster+'"></scr' + 'ipt>');
         document.write('<scr'+'ipt type="text/javascript" src="controllers/mainController.js?cb=' +cachebuster+'"></scr' + 'ipt>');
         document.write('<scr'+'ipt type="text/javascript" src="customizations/translate.js?cb=' +cachebuster+'"></scr' + 'ipt>'); 
 
@@ -62,6 +62,7 @@
     </script>
 
   </md-content>
+  
 </body>
 
 </html>
